k8s/staging/customer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-deployment
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
        - name: customer
          image: sit722acremmalu.azurecr.io/customer_service:staging
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: acr-secret
