k8s/staging/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: sit722acremmalu.azurecr.io/frontend_service:staging
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: acr-secret
