k8s/staging/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: sit722acremmalu.azurecr.io/order-service:staging
          ports:
            - containerPort: 8001
      imagePullSecrets:
        - name: acr-secret
