k8s/staging/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: sit722acremmalu.azurecr.io/product_service:staging
          ports:
            - containerPort: 8002
      imagePullSecrets:
        - name: acr-secret
