k8s/staging/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: staging
spec:
  type: LoadBalancer
  selector:
    app: order
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
