k8s/staging/product-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-db-service
  namespace: staging
spec:
  selector:
    app: product-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
